# cpp_basic

./: .gitignore  CMakeLists.txt  README.md
16_cmake_and_code_organization/: CMakeLists.txt
16_cmake_and_code_organization/include/: my_class.h
16_cmake_and_code_organization/src/: main.cpp
16_cmake_and_code_organization/src/lib/: my_class.cpp
coffee_machine/: CMakeLists.txt  coffee_machine.md
coffee_machine/config/: recipe.json
coffee_machine/include/hardware_vendor/: button.h  valve.h
coffee_machine/include/implementation/: coffee_machine.h
coffee_machine/src/: main.cpp
coffee_machine/src/lib/hardware_vendor/: button.cpp  valve.cpp
coffee_machine/src/lib/implementation/: coffee_machine.cpp
concepts/: 10_classes_part_4.cpp  11_interfaces_example.cpp  12_classes_part_5.cpp  13_smart_pointers.cpp  14_streams.cpp  15_std_containers_and_algorithms.cpp  16_cmake_and_code_organization.cpp  17_type_conversion.cpp  18_templates.cpp  19_lambda.cpp  1_namespaces.cpp  2_const.cpp  3_references.cpp  4_function_overloading copy.cpp  5_auto.cpp  6_exceptions.cpp  7_classes_part_1.cpp  8_classes_part_2.cpp  9_classes_part_3.cpp
